# mr-greeny

./: .gitignore  CLAUDE.md  README.md
backend/: README.md  app.py  requirements.txt  run.sh  test_wakeword_mic.py
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
